Fixed TabGroup overflow issue

--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,15 @@ body { @apply font-sans bg-surface-100 dark:bg-surface-900 text-black dark:text-
 ::-webkit-scrollbar-track { @apply bg-white/20 dark:bg-black/20; }
 ::-webkit-scrollbar-thumb { @apply rounded-full bg-surface-300 dark:bg-surface-700; }
 
+/* Hide Scrollbars */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+.hide-scrollbar {
+    -ms-overflow-style: none;  /* IE/Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 /* --- Typography --- */
 
 /* Headings */
